--- a/views/login_employee.handlebars
+++ b/views/login_employee.handlebars
@@ -52,16 +52,18 @@
                 <div class="login-body">
                     <div class="login-title"><strong id="subdomain"> </strong> <strong> - Employee Login</strong></div>
                     <form class="form-horizontal" method="post">
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <input type="email" name="email" class="form-control" placeholder="Username"/>
+                        <div class="form-group has-feedback">
+                            <div class="col-md-12">
+                                <input type="email" name="email" class="form-control" placeholder="Email"/>
+                                <i class="glyphicon glyphicon-envelope form-control-feedback"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <input type="password" name="password" class="form-control" placeholder="Password"/>
+                        <div class="form-group has-feedback">
+                            <div class="col-md-12">
+                                <input type="password" name="password" class="form-control" placeholder="Password"/>
+                                <i class="glyphicon glyphicon-lock form-control-feedback"></i>
+                            </div>
                         </div>
-                    </div>
                     <div class="form-group">
                         <div class="col-md-6">
                             <a href="#" class="btn btn-link btn-block">Forgot your password?</a>
