--- a/views/subdomain_login.handlebars
+++ b/views/subdomain_login.handlebars
@@ -59,13 +59,6 @@
         {{/if}}
 
         <div class="login-container lightmode">
-            <div class="row">
-                <div class="col-sm-1">
-                    <div class= "home-button">
-                        <img src="../../public/img/home.png" width="25px" style="padding-top:5px;" onclick="location.href = '/';"/>
-                    </div>
-                </div>
-            </div>
             <div class="login-box animated fadeInDown">
                 <div class="login-logo" onclick="location.href = '/';"></div>
                 <div class="login-body">
@@ -73,7 +66,7 @@
                     <form class="form-horizontal" method="POST">
                     <div class="form-group">
                         <div class="col-md-12">
-                            <input type="text" name="subdomain" id="subdomain" class="form-control" placeholder="Your Company Subdomain"/>
+                            <input type="text" name="subdomain" id="subdomain" class="form-control" placeholder="Company Subdomain"/>
                         </div>
                     </div>
                     <div class="form-group">
