--- a/views/account/forgot.handlebars
+++ b/views/account/forgot.handlebars
@@ -64,9 +64,10 @@
         <div class="login-body">
             <div class="login-title"><strong>Forgot Password?</strong></div>
             <form class="form-horizontal" method="POST">
-                <div class="form-group">
+                <div class="form-group has-feedback">
                     <div class="col-md-12">
                         <input type="email" name="email" id="email" class="form-control" placeholder="E-mail"/>
+                        <i class="glyphicon glyphicon-envelope form-control-feedback"></i>
                     </div>
                 </div>
                 <div class="form-group">
