--- a/views/layouts/navigation_peter.handlebars
+++ b/views/layouts/navigation_peter.handlebars
@@ -28,11 +28,19 @@
             </li>
             <li class="xn-profile">
                 <a href="#" class="profile-mini">
-                    <img src="assets/images/users/avatar.jpg" alt="Peter"/>
+                    {{#if user.picture}}
+                        <img src="{{user.picture}}">
+                    {{else}}
+                        <img src="assets/images/users/avatar.jpg alt="Peter">
+                    {{/if}}
                 </a>
                 <div class="profile">
                     <div class="profile-image">
-                        <img src="assets/images/users/avatar.jpg" alt="Peter"/>
+                        {{#if user.picture}}
+                            <img src="{{user.picture}}">
+                        {{else}}
+                            <img src="assets/images/users/avatar.jpg alt="Peter">
+                        {{/if}}
                     </div>
                     <div class="profile-data">
                         <div class="profile-data-name">[Peter]</div>
