--- a/views/patients_mode.handlebars
+++ b/views/patients_mode.handlebars
@@ -6,13 +6,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
-        <script type="text/javascript" src="js/plugins/daterangepicker/daterangepicker.js"></script>
-        <script type='text/javascript' src='js/plugins/bootstrap/bootstrap-datepicker.js'></script>
-        <script type="text/javascript" src="js/plugins.js"></script>
-        <script type="text/javascript" src="js/actions.js"></script>
 
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
         <!-- END META SECTION -->
@@ -73,29 +66,29 @@
                 <div class="login-body">
                     <div class="login-title"><strong>Check In</strong></div>
                     <form class="form-horizontal" method="POST">
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <label for="name" class="col-sm-2 control-label">Name</label>
-                            <input type="text" name="name" id="name" value="Submit" class="form-control" placeholder="Your Name"/>
+                        <div class="form-group has-feedback">
+                            <div class="col-sm-12">
+                            <input type="text" name="name" id="name"  class="form-control" placeholder="Name"/>
+                            <i class="glyphicon glyphicon-user form-control-feedback"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <label for="number" class="col-sm-2 control-label">Number</label>
-                            <input type="text" name="number" id="number" value="Submit" class="form-control" placeholder="Your Phone Number in form +1858123456"/>
+                        <div class="form-group has-feedback">
+                            <div class="col-sm-12">
+                                <input type="tel" name="number" id="number"  class="form-control" placeholder="Phone Number"/>
+                                <i class="glyphicon glyphicon-earphone form-control-feedback"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <label for="email" class="col-sm-2 control-label">Email</label>
-                            <input type="text" name="email" id="email" value="Submit" class="form-control" placeholder="Your Email"/>
+                        <div class="form-group has-feedback">
+                            <div class="col-sm-12">
+                                <input type="email" name="email" id="email" class="form-control" placeholder="Email"/>
+                                <i class="glyphicon glyphicon-envelope form-control-feedback"></i>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-lg-6 col-lg-offset-3">
-                            <button class="btn btn-info btn-block">Check In</button>
+                        <div class="form-group">
+                            <div class="col-lg-6 col-lg-offset-3">
+                                <button class="btn btn-info btn-block">Check In</button>
+                            </div>
                         </div>
-                    </div>
                     </form>
                 </div>
 
@@ -121,7 +114,29 @@
                 </div>
             </div>
         </div>
+        <!-- START SCRIPTS -->
+        <!-- START SCRIPTS -->
+        <!-- START PLUGINS -->
+        <script type="text/javascript" src="js/plugins/jquery/jquery.min.js"></script>
+        <script type="text/javascript" src="js/plugins/jquery/jquery-ui.min.js"></script>
+        <script type="text/javascript" src="js/plugins/bootstrap/bootstrap.min.js"></script>
+        <!-- END PLUGINS -->
 
+        <!-- START THIS PAGE PLUGINS-->
+        <script type='text/javascript' src='js/plugins/icheck/icheck.min.js'></script>
+        <script type="text/javascript" src="js/plugins/mcustomscrollbar/jquery.mCustomScrollbar.min.js"></script>
+        <script type="text/javascript" src="js/plugins/scrolltotop/scrolltopcontrol.js"></script>
+
+
+        <script type="text/javascript" src="js/plugins/owl/owl.carousel.min.js"></script>
+
+        <script type="text/javascript" src="js/plugins/moment.min.js"></script>
+        <!-- END THIS PAGE PLUGINS-->
+
+        <!-- START TEMPLATE -->
+        <script type="text/javascript" src="js/plugins.js"></script>
+        <script type="text/javascript" src="js/actions.js"></script>
+        <!-- END SCRIPTS -->
     </body>
 </html>
 
