--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -96,7 +96,7 @@ a:hover {
   font-size: 1px;
   color: #FFF;
   text-indent: 99999px;
-  background: url("../img/logo_landing.svg") left top no-repeat;
+  background: url("../img/logo_landing.png") left top no-repeat;
   width: 220px;
   height: 50px;
   float: left;
