edited functional section of landing page

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -101,7 +101,7 @@
                                         <ul>
                                             <li>Your very own personal assistant to make check-ins fast &amp; easy.</li>
                                             <li>Internal operations will be orgranized for efficiency! </li>
-                                            <li> Interactive fun for everyone !</li>
+                                            <li>Interactive fun for everyone !</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -135,11 +135,25 @@
                             <div class="block-heading block-heading-centralized">
                                 <h2 class="heading-underline"><strong>FUN</strong>ctional</h2>
                                 <div class="block-heading-text">
-                                    Receptional is easy and FUN to use. If your business always have long waits,
-                                    and lots of customers to keep track of, Receptional is just for you! You can
-                                    create your very own forms or use the default provided for you and all you have
-                                    to do is wait as customers sign in. No hastles with paperwork, no skipping customers
-                                    and most importantly, no unhappy customers!
+                                    <h3>Receptional is FUN to use. </h3>
+                                    <p>Ever have moments where customers wait to check in? Was it from a long line?
+                                        Or maybe your receptionist had to take a company call? Well then Receptional was built
+                                        just for you!
+                                    </p>
+                                    
+                                    <br>
+                                    
+                                    <h3>It's quick and  easy!</h3>
+                                    <p>
+                                    You can create your very own forms with our simple drag and drop feature!
+                                    In a hurry? Use the provided default forms!
+                                    </p>
+                                    <p>
+                                        <strong>No</strong> more fumbling with hassling paperwork. 
+                                        <strong>No</strong>skipping customers! 
+                                        And most importantly...<strong>No</strong> <i>unhappy</i> customers!
+                                    </p>
+                                    
                                 </div>
                             </div>
                         </div>
