edited typos. Can't view locally so pushing to view on receptional.xyz

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -85,7 +85,7 @@
                 <div class="page-content-holder">
                     <!-- TODO: Update this with Project info -->
                     <div class="block-heading block-heading-centralized this-animate" data-animate="fadeInDown">
-                        <h2><strong>Receptional</strong> </h2>
+                        <h1><strong>Receptional</strong> </h1>
                         <div class="block-heading-text">
                             The exceptional assistant you've been searching for!
                         </div>
@@ -96,7 +96,7 @@
                             <div class="col-md-4">
 
                                 <div class="text-column this-animate" data-animate="fadeInLeft">
-                                    <h4>Made Just For You!</h4>
+                                    <h2>Made Just For You!</h2>
                                     <div class="text-column this-animatez">
                                         <ul>
                                             <li>Your very own personal assistant to make check-ins fast &amp; easy.</li>
@@ -135,7 +135,7 @@
                             <div class="block-heading block-heading-centralized">
                                 <h2 class="heading-underline"><strong>FUN</strong>ctional</h2>
                                 <div class="block-heading-text">
-                                    <h3>Receptional is FUN to use. </h3>
+                                    <h4>Receptional is FUN to use. </h4>
                                     <p>Ever have moments where customers wait to check in? Was it from a long line?
                                         Or maybe your receptionist had to take a company call? Well then Receptional was built
                                         just for you!
@@ -143,14 +143,14 @@
                                     
                                     <br>
                                     
-                                    <h3>It's quick and  easy!</h3>
+                                    <h4>It's quick and  easy!</h4>
                                     <p>
                                     You can create your very own forms with our simple drag and drop feature!
                                     In a hurry? Use the provided default forms!
                                     </p>
                                     <p>
                                         <strong>No</strong> more fumbling with hassling paperwork. 
-                                        <strong>No</strong>skipping customers! 
+                                        <strong>No</strong> more skipping customers! 
                                         And most importantly...<strong>No</strong> <i>unhappy</i> customers!
                                     </p>
                                     
