edited typos. Can't view locally so pushing to view on receptional.xyz

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -149,7 +149,7 @@
                                     In a hurry? Use the provided default forms!
                                     </p>
                                     <p>
-                                        <strong>No</strong> more fumbling with hassling paperwork. 
+                                        <strong>No</strong> more hassling paperwork. 
                                         <strong>No</strong> more skipping customers! 
                                         And most importantly...<strong>No</strong> <i>unhappy</i> customers!
                                     </p>
