edited typos. Can't view locally so pushing to view on receptional.xyz

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -240,7 +240,7 @@
                                     FREE<span></span>
                                 </div>
                                 <div class="pb-block">
-                                    <p><span class="fa fa-check"></span> Lively Virtual Recptionist! </p>
+                                    <p><span class="fa fa-check"></span> Lively Virtual Receptionist! </p>
                                     <p><span class="fa fa-check"></span> Unlimited visitor check ins</p>
                                     <p><span class="fa fa-check"></span> Customizable forms </p>
                                 </div>
