map and iPad images for landing page. demo data for employee and owner

--- a/views/patients_mode.handlebars
+++ b/views/patients_mode.handlebars
@@ -36,13 +36,6 @@
     <body>
         
         <div class="login-container lightmode">
-            <div class="row">
-                <div class="col-sm-1">
-                    <div class= "home-button">
-                        <img src="../../public/img/home.png" width="25px" style="padding-top:5px;" onclick="location.href = '/';"/>
-                    </div>
-                </div>
-            </div>
             {{#if msg}}
             <div class="alert alert-success">
                 <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
@@ -117,6 +110,9 @@
                 <div class="login-footer">
                     <div class="pull-left">
                         &copy; 2016 Receptional
+                    </div>
+                    <div class="pull-right">
+                        <a href="/" onclick="location.href = '/';">Overview</a>
                     </div>
                 </div>
             </div>
