--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -110,7 +110,7 @@
                                 </div>
                             </div>
                             <div class="col-md-8 text-center this-animate" data-animate="fadeInRight">
-                                <img src="assets/atlant_monitor.png" class="img-responsive-mobile" />
+                                <img src="assets/monitor.png" class="img-responsive-mobile" />
                             </div>
                         </div>
                     </div>
@@ -158,7 +158,7 @@
                             </div>
                         </div>
                         <div class="col-md-4 this-animate text-center" data-animate="fadeInRight">
-                            <img src="assets/atlant_responsive.png" class="img-responsive-mobile" />
+                            <img src="assets/responsive.png" class="img-responsive-mobile" />
                         </div>
                     </div>
 
