Updated form with kevin/patrick's code

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -85,7 +85,7 @@
                 <div class="page-content-holder">
                     <!-- TODO: Update this with Project info -->
                     <div class="block-heading block-heading-centralized this-animate" data-animate="fadeInDown">
-                        <h1><strong>Receptional</strong> </h1>
+                        <h1>Receptional</h1>
                         <div class="block-heading-text">
                             The exceptional assistant you've been searching for!
                         </div>
