--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -375,7 +375,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-md-6" ondrop="dropDelete(event)" ondragover="allowDrop(event)">
-                                    <button type="submit" class="btn btn-primary" disabled>
+                                    <button type="submit" class="btn btn-primary" id="deletedrop" disabled>
                                         <span class="glyphicon glyphicon-trash"></span> Delete
                                     </button>
                                 </div>
@@ -387,8 +387,33 @@
                         </fieldset>
                     </form>
                 </div>
-                <!-- End form builder-->
+                        <form class="form-horizontal" method="POST">
+                            <div class="form-group">
+                                <input type="hidden" id="hiddenformhtml" name="form">
+                            </div>
+                            <div>
+                                <div class="col-lg-12 col-lg-offset-5">
+                                    <button id="saveform" class="btn btn-success" onclick="test()">Save Form</button>
+                                </div>
+                            </div>
+
+                        </form>
+
+                        <!-- End form builder-->
                         </div></div>
+                <!-- Start This Page Script-->
+                <script>
+                    test = function(){
+
+                        var div = document.getElementById("deletedrop");
+                        div.parentNode.removeChild(div);
+
+                        document.getElementById("hiddenformhtml").value = document.getElementById("builder").innerHTML;
+
+                    };
+                </script>
+                <!-- End This Page Script-->
+
                 <script data-main="http://bootsnipp.com/j87klPolka/assets3/js/main-built.js" src="http://bootsnipp.com/j87klPolka/assets3/js/lib/require.js" ></script>
             </div>
 	</body>
