--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -85,21 +85,21 @@
                 <div class="page-content-holder">
                     <!-- TODO: Update this with Project info -->
                     <div class="block-heading block-heading-centralized this-animate" data-animate="fadeInDown">
-                        <h1>Receptional</h1>
+                        <h1 style="font-size:500%; margin-bottom:20px;"><strong>Receptional</strong></h1>
                         <div class="block-heading-text">
-                            The exceptional assistant you've been searching for!
+                            <p style="font-size:150%"><i>The exceptional assistant you've been searching for!</i></p>
                         </div>
                     </div>
 
                     <div class="block push-up-20">
-                        <div class="row">
+                        <div class="row" >
                             <div class="col-md-4">
 
                                 <div class="text-column this-animate" data-animate="fadeInLeft">
-                                    <h2>Made Just For You!</h2>
+                                    <h2 style="font-size:200%; margin-top:30px; margin-bottom:10px">Made Just For You!</h2>
                                     <div class="text-column this-animatez">
-                                        <ul>
-                                            <li>Your very own personal assistant to make check-ins fast &amp; easy.</li>
+                                        <ul style="font-size:160%;">
+                                            <li>Your very own <i>personal</i> assistant to make check-ins fast &amp; easy.</li>
                                             <li>Internal operations will be orgranized for efficiency! </li>
                                             <li>Interactive fun for everyone !</li>
                                         </ul>
@@ -110,7 +110,7 @@
                                 </div>
                             </div>
                             <div class="col-md-8 text-center this-animate" data-animate="fadeInRight">
-                                <img src="assets/monitor.png" class="img-responsive-mobile" />
+                                <img src="assets/atlant_monitor.png" class="img-responsive-mobile" />
                             </div>
                         </div>
                     </div>
@@ -133,9 +133,8 @@
                         <div class="col-md-8 this-animate" data-animate="fadeInLeft">
 
                             <div class="block-heading block-heading-centralized">
-                                <h2 class="heading-underline"><strong>FUN</strong>ctional</h2>
+                                <h2 class="heading-underline" style="font-size:400%"><strong>FUN</strong>ctional</h2>
                                 <div class="block-heading-text">
-                                    <h4>Receptional is FUN to use. </h4>
                                     <p>Ever have moments where customers wait to check in? Was it from a long line?
                                         Or maybe your receptionist had to take a company call? Well then Receptional was built
                                         just for you!
@@ -158,7 +157,7 @@
                             </div>
                         </div>
                         <div class="col-md-4 this-animate text-center" data-animate="fadeInRight">
-                            <img src="assets/responsive.png" class="img-responsive-mobile" />
+                            <img src="assets/atlant_responsive.png" class="img-responsive-mobile" />
                         </div>
                     </div>
 
