--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -158,6 +158,12 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label for="name" class="col-sm-2 control-label">User ID</label>
+                        <div class="col-sm-4">
+                            <input type="text" name="name" id="name" value="{{user.id}}" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label for="location" class="col-sm-2 control-label">Your Phone</label>
                         <div class="col-sm-4">
                             <input type="text" name="phone" id="phone" value="{{user.phone_number}}" class="form-control">
@@ -230,6 +236,12 @@
                         <label for="name" class="col-sm-2 control-label">Company Name</label>
                         <div class="col-sm-4">
                             <input type="text" name="name" id="name" value="{{user.companyname}}" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="name" class="col-sm-2 control-label">User ID</label>
+                        <div class="col-sm-4">
+                            <input type="text" name="name" id="name" value="{{user.id}}" class="form-control">
                         </div>
                     </div>
                     <div class="form-group">
