--- a/views/viewform.handlebars
+++ b/views/viewform.handlebars
@@ -28,7 +28,7 @@
         </script>
 
         <!-- Scripts for Logentries -->
-        <script src="frontend/js/le.min.js"></script>
+        <script src="../public/js/le.min.js"></script>
         <script>
             // Set up le.js
             LE.init({token: '02da12dd-d09a-4c93-86da-ec1deb507831', page_info: 'per-entry'})
