--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -241,7 +241,7 @@
                     <div class="form-group">
                         <label for="name" class="col-sm-2 control-label">User ID</label>
                         <div class="col-sm-4">
-                            <input type="text" name="name" id="name" value="{{user.id}}" class="form-control">
+                            <input type="text" name="name" id="name" value="{{user.id}}" class="form-control" readonly>
                         </div>
                     </div>
                     <div class="form-group">
@@ -268,7 +268,7 @@
                     </div>
                 </form>
 
-                
+
                 <div class="page-header">
                     <h3>Change Password</h3></div>
                 <form action="/updatepassword" method="POST" class="form-horizontal">
@@ -378,9 +378,3 @@
 <!-- END SCRIPTS -->
 </body>
 </html>
-
-
-
-
-
-
