--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -235,7 +235,7 @@
                     <div class="form-group">
                         <label for="name" class="col-sm-2 control-label">User ID</label>
                         <div class="col-sm-4">
-                            <input type="text" name="name" id="name" value="{{user.id}}" class="form-control" readonly>
+                            <input type="text" name="userId" id="userId" value="{{user.id}}" class="form-control" readonly>
                         </div>
                     </div>
                     <div class="form-group">
