--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -127,33 +127,33 @@
                                     If you have any questions, feel free to send us an email using the form below!
                                 </div>
                             </div>
-
+                            <form method="post">
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label>Name <span class="text-hightlight">*</span></label>
-                                        <input type="text" class="form-control" />
+                                        <input type="text" id= "name" name="name"class="form-control" />
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label>E-mail <span class="text-hightlight">*</span></label>
-                                        <input type="text" class="form-control" />
+                                        <input type="text" id= "email" name="email" class="form-control" />
                                     </div>
                                 </div>
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label>Subject <span class="text-hightlight">*</span></label>
-                                        <input type="text" class="form-control" />
+                                        <input type="text" id= "subject" name="subject" class="form-control" />
                                     </div>
                                     <div class="form-group">
                                         <label>Message <span class="text-hightlight">*</span></label>
-                                        <textarea class="form-control" rows="8"></textarea>
+                                        <textarea class="form-control" id= "message" name="message" rows="8"></textarea>
                                     </div>
                                     <button class="btn btn-primary btn-lg pull-right">Send Message</button>
                                 </div>
                             </div>
-
+                            </form>
                         </div>
                         <div class="col-md-5 this-animate" data-animate="fadeInRight">
 
