--- a/views/settings_p.handlebars
+++ b/views/settings_p.handlebars
@@ -93,7 +93,7 @@
                 <!-- END TOGGLE NAVIGATION -->
                 <!-- SIGN OUT -->
                 <li class="xn-icon-button pull-right">
-                    <a href="/logout" class="mb-control" data-box="#mb-signout"><span class="fa fa-sign-out"></span></a>
+                    <a href="/logout" ></a>
                 </li>
                 <!-- END SIGN OUT -->
             </ul>
