--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -123,7 +123,7 @@
                 <!-- END TOGGLE NAVIGATION -->
                 <!-- SIGN OUT -->
                 <li class="xn-icon-button pull-right">
-                    <a href="/logout" class="mb-control"><span class="fa fa-sign-out"></span></a>
+                    <a href="/logout"><span class="fa fa-sign-out"></span></a>
                 </li>
                 <!-- END SIGN OUT -->
             </ul>
